--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -194,13 +194,31 @@ pre {
   background: #00ada7;
   text-shadow: none;
 }
-.home-template .tag-roundup .featured-media {
+.home-template .tag-roundup .featured-media,
+.tag-template .tag-roundup .featured-media,
+.page-about .tag-roundup .featured-media,
+.paged .tag-roundup .featured-media {
   display: none;
-  border-radius: 3px;
 }
-.home-template .tag-roundup .post-head {
+.home-template .tag-roundup .post-head,
+.tag-template .tag-roundup .post-head,
+.page-about .tag-roundup .post-head,
+.paged .tag-roundup .post-head {
   border-bottom: 1px solid #e9e9e9;
   padding-bottom: 20px;
+}
+.home-template .tag-hash-image .featured-media,
+.tag-template .tag-hash-image .featured-media,
+.page-about .tag-hash-image .featured-media,
+.paged .tag-hash-image .featured-media {
+  display: block;
+}
+.home-template .tag-hash-image .post-head,
+.tag-template .tag-hash-image .post-head,
+.page-about .tag-hash-image .post-head,
+.paged .tag-hash-image .post-head {
+  border-bottom: 0;
+  padding-bottom: 0;
 }
 /*====================================================
 	header
@@ -1173,11 +1191,9 @@ p {
 }
 .post-template .link-preview .preview-image {
   display: inline-block;
-  margin: 0 20px 20px 0;
   height: 200px;
   width: 100%;
   float: left;
-  background-image: url("https://hackers.nyc3.digitaloceanspaces.com/linkpreview.jpg");
   background-size: cover;
   background-position-x: center;
   background-position-y: center;
@@ -1185,8 +1201,7 @@ p {
 }
 @media (max-width: 600px) {
   .post-template .link-preview .preview-image {
-    height: 50px;
-    width: 50px;
+    height: 130px;
   }
 }
 .post-template .link-preview i {
@@ -1211,11 +1226,11 @@ p {
   display: inline-block;
   width: 100%;
   overflow: hidden;
-  padding: 0 10px;
+  padding: 10px 10px 0 10px;
 }
 .post-template .link-preview .link-info h4 {
   margin-top: 0;
-  font-size: 1.5em;
+  font-size: 1.3em;
   font-weight: 500;
 }
 .post-template .link-preview .link-info p {
@@ -1230,6 +1245,11 @@ p {
   -webkit-box-orient: vertical;
   overflow: hidden;
 }
+@media (max-width: 600px) {
+  .post-template .link-preview .link-info p {
+    display: none;
+  }
+}
 .post-template .link-preview:hover {
   background-color: #00ada7;
   color: #fff;
@@ -1239,7 +1259,8 @@ p {
 }
 .post-template .link-preview:hover a,
 .post-template .link-preview:hover h4,
-.post-template .link-preview:hover p {
+.post-template .link-preview:hover p,
+.post-template .link-preview:hover span {
   color: #fff;
 }
 .page-template .post-title {
@@ -1255,7 +1276,7 @@ p {
 .home-template .post .twitter-tweet,
 .paged .post .twitter-tweet,
 .tag-template .post .twitter-tweet {
-  display: none;
+  display: none !important;
 }
 .author-template .post .kg-card-markdown a,
 .home-template .post .kg-card-markdown a,
@@ -1290,8 +1311,6 @@ p {
 .paged .post .kg-card-markdown a,
 .tag-template .post .kg-card-markdown a {
   white-space: nowrap;
-  /*max-width: 250px;
-			display: inline-block !important;*/
   overflow: hidden;
   text-overflow: ellipsis;
   line-height: 1.5;
