--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -93,6 +93,7 @@ h5 {
 	@media(max-width: 600px) {
 		font-size: 1.3em;
 		margin-top: 5px;
+		text-align: center;
 	}
 }
 
@@ -249,16 +250,31 @@ pre {
 		display:none;
 	}
 
+	.tag-hash-image {
+		.post-head{
+			margin-top: 20px !important;
+		}
+
+	}
+
 	.tag-roundup {
 		.featured-media {
 			display: none;
 		}
 
 
-
+/*
 		.post-head {
 			border-bottom: 1px solid #e9e9e9;
 			padding-bottom: 20px;
+		}
+*/
+		.post-head {
+			margin-top: 0;
+		}
+
+		.post-content {
+			display: none;
 		}
 
 
@@ -456,13 +472,25 @@ pre {
 	}
 
 	.post-head {
-		text-align: center;
-		margin-bottom: 20px;
+		margin: 20px 0;
+		line-height: 1;
 
 		.post-title {
+			text-align: left;
+	    width: 100%;
 			margin: 0;
 			line-height: 0.9;
-			font-weight: 700;
+			font-weight: 800;
+			font-size: 3.3em;
+			line-height: 1;
+			overflow: hidden;
+			text-overflow: ellipsis;
+			display: block;
+			white-space: nowrap;
+
+			@media(max-width: 600px) {
+				white-space: normal;
+			}
 
 			a {
 				color: @text-color-heading;
@@ -478,8 +506,10 @@ pre {
 		}
 
 		.post-excerpt {
-			margin-top: 10px;
+			margin: 10px auto 15px;
+			line-height: 1;
 			font-weight: 600;
+			text-align: left;
 		}
 
 		.post-meta {
@@ -535,8 +565,9 @@ pre {
 	}
 
 	.post-content {
-		margin: 30px 0;
+		margin: 20px 0;
 		overflow-x: hidden;
+		clear: both;
 
 		.fluid-width-video-wrapper {
 			margin: 0;
@@ -906,26 +937,29 @@ pre {
 		li {
 			display: inline-block;
 			text-align: center;
+			border: 1px solid @border-color;
+			padding: 4px 2%;
 
 			a {
 				i {
-					width: 35px;
-					height: 35px;
-					line-height: 35px;
-					border: 1px solid @border-color;
+					line-height: 1;
 					color: @text-color-light;
 					.transition(all 0.2s);
+					height: 15px;
+    			width: 23px;
 				}
+		}
+		&:hover {
+			background: @theme-color;
+			border: 1px solid @theme-color;
+			cursor: pointer;
 
-				&:hover {
-					i {
-						color: @white;
-						background: @theme-color;
-						border: 1px solid @theme-color;
-					}
-				}
+			i {
+				color: @white;
 			}
 		}
+	}
+
 	}
 
 	.tag-cloud {
@@ -1216,7 +1250,7 @@ p {
 		}
 
 		h2 {
-			font-weight: 700;
+			font-weight: 800;
 		}
 
 		a {
@@ -1357,11 +1391,24 @@ p {
 	}
 }
 
-.post-template {
+.post-template,
+.page-template {
 	&p {
 		font-size: 24px;
 		font-weight: 600;
 	}
+
+	.post-head {
+		margin-top: 0;
+
+		.post-title,
+		.post-meta,
+		h5 {
+			text-align: center !important;
+		}
+
+	}
+
 
 	.tag-list {
 		margin: 3px;
@@ -1488,15 +1535,9 @@ p {
 			display: inline !important;
 		}
 
-		p:nth-of-type(1),
-		p:nth-of-type(2) {
+		p:nth-of-type(1) {
 			display:block;
-		}
-
-		p:nth-of-type(2) {
-			white-space: nowrap;
-			overflow: hidden;
-			text-overflow: ellipsis;
+			margin:0;
 		}
 
 		a {
@@ -1511,6 +1552,9 @@ p {
 
 
 	&.tag-video {
+		.post-head {
+			display: none;
+		}
 		.fluid-width-video-wrapper {
 			display: block !important;
 			@media(max-width: 600px) {
