--- a/partials/footer.hbs
+++ b/partials/footer.hbs
@@ -38,21 +38,11 @@
 	<a href="#" id="back-to-top"><i class="fas fa-arrow-up"></i></i></a>
 	{{ghost_foot}}
 	<!-- scripts -->
-	<!--
-	<script type="text/javascript">
-    /* * * DON'T EDIT BELOW THIS LINE * * */
-    (function () {
-        var s = document.createElement('script'); s.async = true;
-        s.type = 'text/javascript';
-        s.src = '//' + disqus_shortname + '.disqus.com/count.js';
-        (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
-    }());
-    </script>
--->
   <script src="{{asset "/js/jquery.min.js"}}"></script>
 	<script src="{{asset "/js/jquery.fitvids.js"}}"></script>
-	<script src="{{asset "/js/bootstrap.min.js"}}"></script>
-	<script src="{{asset "/js/jflickrfeed.min.js"}}"></script>
+	<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.0/umd/popper.min.js" integrity="sha384-cs/chFZiN24E4KMATLdqdvsezGxaGsi4hLGOzlXwp5UZB1LY//20VyM2taTB4QvJ" crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.0/js/bootstrap.min.js" integrity="sha384-uefMccjFJAIv6A+rW+L4AHf99KvxDjWSu1z9VI8SKNVmz4sk7buKt/6v9KI65qnm" crossorigin="anonymous"></script>
+	<!--<script src="{{asset "/js/bootstrap.min.js"}}"></script>-->
 	<script src="{{asset "/js/highlight.pack.js"}}"></script>
 	<script src="{{asset "/js/main.js"}}"></script>
 </body>
