--- a/partials/widget-recentpost.hbs
+++ b/partials/widget-recentpost.hbs
@@ -4,9 +4,11 @@
 	<h4 class="title">Recent</h4>
 	<div class="content recent-post">
 		{{#foreach posts}}
-		<div class="recent-single-post">
-			<a href="{{url}}" class="post-title">{{title}}</a><div class="date">{{date format="MMMM DD, YYYY"}}</div>
-		</div>
+		{{^has tag="#hidden"}}
+			<div class="recent-single-post">
+				<a href="{{url}}" class="post-title">{{title}}</a><div class="date">{{date format="MMMM DD, YYYY"}}</div>
+			</div>
+		{{/has}}
 		{{/foreach}}
 	</div>
 </div>
