--- a/default.hbs
+++ b/default.hbs
@@ -14,6 +14,7 @@
 	<link rel="stylesheet" href="https://pro.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-KwxQKNj2D0XKEW5O/Y6haRH39PE/xry8SAoLbpbCMraqlX7kUP6KHOnrlrtvuJLR" crossorigin="anonymous">
 	<link rel="stylesheet" href="{{asset "css/bootstrap.min.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/screen.css"}}">
+	<link rel="stylesheet" type="text/css" href="{{asset "css/bootstrap-override.css"}}">
 	<link rel="stylesheet" type="text/css" href="{{asset "css/hl-styles/code.css"}}">
 	{{#is "post"}}
 	<meta property="og:image" content="{{img_url feature_image}}">
