--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -47,7 +47,7 @@ h6 {
 .h1,
 h1 {
   font-size: 3em;
-  font-weight: 800;
+  font-weight: 700;
 }
 @media (max-width: 600px) {
   .h1,
@@ -58,7 +58,6 @@ h1 {
 .h2,
 h2 {
   font-size: 2.2em;
-  font-weight: 500;
   font-family: 'mr-eaves-xl-modern';
 }
 @media (max-width: 600px) {
@@ -90,6 +89,7 @@ h5 {
   font-family: 'mr-eaves-xl-modern', serif;
   color: #141624;
   line-height: 1;
+  text-align: left;
 }
 @media (max-width: 600px) {
   .h5,
@@ -235,63 +235,26 @@ pre {
   top: 0;
   content: '';
 }
-.home-template .upcoming,
-.tag-template .upcoming,
-.page-about .upcoming,
-.paged .upcoming,
-.home-template .tag-hash-upcoming,
-.tag-template .tag-hash-upcoming,
-.page-about .tag-hash-upcoming,
-.paged .tag-hash-upcoming {
+.post-preview.upcoming,
+.post-preview.tag-hash-upcoming {
   display: none;
 }
-.home-template .tag-hash-image .post-head,
-.tag-template .tag-hash-image .post-head,
-.page-about .tag-hash-image .post-head,
-.paged .tag-hash-image .post-head {
-  margin-top: 20px !important;
-}
-.home-template .tag-roundup,
-.tag-template .tag-roundup,
-.page-about .tag-roundup,
-.paged .tag-roundup {
-  /*
-		.post-head {
-			border-bottom: 1px solid #e9e9e9;
-			padding-bottom: 20px;
-		}
-*/
-}
-.home-template .tag-roundup .featured-media,
-.tag-template .tag-roundup .featured-media,
-.page-about .tag-roundup .featured-media,
-.paged .tag-roundup .featured-media {
+.post-preview.tag-roundup .featured-media {
   display: none;
 }
-.home-template .tag-roundup .post-head,
-.tag-template .tag-roundup .post-head,
-.page-about .tag-roundup .post-head,
-.paged .tag-roundup .post-head {
+.post-preview.tag-roundup .post-head {
   margin-top: 0;
+  padding-top: 0;
 }
-.home-template .tag-roundup .post-content,
-.tag-template .tag-roundup .post-content,
-.page-about .tag-roundup .post-content,
-.paged .tag-roundup .post-content {
+.post-preview.tag-roundup .post-content {
   display: none;
 }
-.home-template .tag-hash-image .featured-media,
-.tag-template .tag-hash-image .featured-media,
-.page-about .tag-hash-image .featured-media,
-.paged .tag-hash-image .featured-media {
-  display: block;
+.post-preview.tag-hash-image .featured-media {
+  display: block !important;
 }
-.home-template .tag-hash-image .post-head,
-.tag-template .tag-hash-image .post-head,
-.page-about .tag-hash-image .post-head,
-.paged .tag-hash-image .post-head {
+.post-preview.tag-hash-image .post-head {
   border-bottom: 0;
-  padding-bottom: 0;
+  padding: 20px 0;
 }
 /*====================================================
 	header
@@ -312,6 +275,16 @@ pre {
 .main-header .branding img {
   width: 400px;
   max-width: 80%;
+}
+@media (max-width: 800px) {
+  .main-header .branding img {
+    opacity: 0;
+  }
+}
+.main-header .container:nth-of-type(1) {
+  background: url(https://hackers.nyc3.digitaloceanspaces.com/logo_white.png) center center;
+  background-size: contain;
+  background-repeat: no-repeat;
 }
 .navbar-header {
   text-align: center;
@@ -445,6 +418,7 @@ pre {
   -o-transform: rotate(45deg);
   transform: rotate(45deg);
   font-size: 12px;
+  z-index: 10;
 }
 .post .featured i {
   -webkit-transform: rotate(-45deg);
@@ -476,16 +450,16 @@ pre {
   transform: rotate(-45deg);
 }
 .post .post-head {
-  margin: 20px 0;
+  padding: 30px 0;
   line-height: 1;
+  text-align: left;
 }
 .post .post-head .post-title {
   text-align: left;
   width: 100%;
   margin: 0;
   line-height: 0.9;
-  font-weight: 800;
-  font-size: 3.3em;
+  font-size: 3em;
   line-height: 1;
   overflow: hidden;
   text-overflow: ellipsis;
@@ -510,7 +484,7 @@ pre {
   }
 }
 .post .post-head .post-excerpt {
-  margin: 10px auto 15px;
+  margin: 5px auto 0;
   line-height: 1;
   font-weight: 600;
   text-align: left;
@@ -518,17 +492,15 @@ pre {
 .post .post-head .post-meta {
   font-style: italic;
   color: #959595;
-  margin: 18px 0;
+  margin: 15px 0 0;
   font-size: 12px;
+  text-align: left;
 }
 .post .post-head .post-meta div {
   display: inline-block;
 }
-.post .post-head .post-meta .date {
-  margin-left: 20px;
-}
 .post .post-head .post-meta .date i {
-  margin-right: 5px;
+  margin-right: 10px;
 }
 .post .post-head .post-meta img {
   height: 14px;
@@ -541,9 +513,13 @@ pre {
 .post .post-head .post-meta .comment-count {
   display: none;
 }
+@media (max-width: 600px) {
+  .post .post-head {
+    padding: 20px 0;
+  }
+}
 .post .featured-media {
   overflow: hidden;
-  border-radius: 3px;
 }
 .post .featured-media img {
   width: 100%;
@@ -555,22 +531,12 @@ pre {
   opacity: 0.8;
 }
 .post .post-content {
-  margin: 20px 0;
+  margin: 0 0 20px;
   overflow-x: hidden;
   clear: both;
 }
 .post .post-content .fluid-width-video-wrapper {
   margin: 0;
-}
-@media (max-width: 600px) {
-  .post .post-content .fluid-width-video-wrapper {
-    height: 300px;
-  }
-}
-@media (max-width: 400px) {
-  .post .post-content .fluid-width-video-wrapper {
-    height: 170px;
-  }
 }
 .post .post-content iframe {
   margin: 0;
@@ -677,6 +643,10 @@ pre {
   color: #c4c4c4;
   text-align: center;
 }
+.post-page .post-head {
+  border-bottom: 1px solid #eaeaea;
+  margin-bottom: 30px;
+}
 /*====================================================
 	pagination
 ====================================================*/
@@ -693,8 +663,8 @@ pre {
   background: #00ada7;
   -webkit-border-radius: 2px;
   -moz-border-radius: 2px;
-  border-radius: 2px;
-  padding: 2px 7px;
+  border-radius: 0;
+  padding: 6px 13px;
 }
 .pagination a:hover {
   background: #003e7c;
@@ -944,7 +914,6 @@ pre {
 }
 .widget .recent-post .recent-single-post .date,
 .widget .recent-post .single-author .date {
-  font-style: italic;
   color: #959595;
   font-size: 12px;
 }
@@ -1141,6 +1110,11 @@ p {
   background-blend-mode: multiply;
   color: #505050;
 }
+@media (max-width: 600px) {
+  .author-container .about-author {
+    margin-bottom: 10px;
+  }
+}
 .author-container .meta-info {
   color: #505050;
 }
@@ -1160,9 +1134,6 @@ p {
   .tag-container .tag-wrapper {
     width: 100%;
   }
-}
-.tag-container .tag-wrapper h2 {
-  font-weight: 800;
 }
 .tag-container .tag-wrapper a .bg-wrapper {
   background-size: cover;
@@ -1270,28 +1241,29 @@ p {
   }
 }
 .fluid-width-video-wrapper {
-  padding-top: 0 !important;
-  height: 400px;
+  padding: 0 !important;
+  height: 26.5em;
+  /*height: 425px;*/
+}
+.page {
+  margin-bottom: 0;
 }
 .page iframe {
   margin: 0 auto !important;
+}
+.post-preview .post-title,
+.post-preview .post-meta,
+.post-preview h5 {
+  text-align: left;
 }
 .post-templatep,
 .page-templatep {
   font-size: 24px;
   font-weight: 600;
 }
-.post-template .post-head,
-.page-template .post-head {
-  margin-top: 0;
-}
-.post-template .post-head .post-title,
-.page-template .post-head .post-title,
-.post-template .post-head .post-meta,
-.page-template .post-head .post-meta,
-.post-template .post-head h5,
-.page-template .post-head h5 {
-  text-align: center !important;
+.post-template .post-title,
+.page-template .post-title {
+  font-weight: 700;
 }
 .post-template .tag-list,
 .page-template .tag-list {
@@ -1442,6 +1414,12 @@ p {
   text-overflow: ellipsis;
   line-height: 1.5;
 }
+.author-template .post.tag-video,
+.home-template .post.tag-video,
+.paged .post.tag-video,
+.tag-template .post.tag-video {
+  padding: 0;
+}
 .author-template .post.tag-video .post-head,
 .home-template .post.tag-video .post-head,
 .paged .post.tag-video .post-head,
@@ -1454,14 +1432,6 @@ p {
 .tag-template .post.tag-video .fluid-width-video-wrapper {
   display: block !important;
 }
-@media (max-width: 600px) {
-  .author-template .post.tag-video .fluid-width-video-wrapper,
-  .home-template .post.tag-video .fluid-width-video-wrapper,
-  .paged .post.tag-video .fluid-width-video-wrapper,
-  .tag-template .post.tag-video .fluid-width-video-wrapper {
-    height: 160px;
-  }
-}
 .author-template .post.tag-video .post-permalink,
 .home-template .post.tag-video .post-permalink,
 .paged .post.tag-video .post-permalink,
@@ -1472,7 +1442,7 @@ p {
 .home-template .post.tag-video .post-content,
 .paged .post.tag-video .post-content,
 .tag-template .post.tag-video .post-content {
-  margin: 0 0 5px;
+  margin: 0;
 }
 .page-about .col-md-6 {
   padding: 0;
@@ -1511,7 +1481,7 @@ p {
   }
   .col-sm-12 .navbar-collapse li a {
     line-height: 1;
-    font-size: 15px;
+    font-size: 16px;
   }
   .col-sm-12 .navbar-header {
     display: none;
