--- a/assets/css/bootstrap-override.less
+++ b/assets/css/bootstrap-override.less
@@ -23,6 +23,12 @@
     .main-header {
       display: none;
     }
+
+    .featured-media {
+      width: 110%;
+      margin-left: -5%;
+      margin-top: -6%;
+    }
   }
 
   #main-menu {
@@ -31,6 +37,12 @@
     }
     @media(max-width: 600px){
       max-width: 310px;
+    }
+  }
+
+  .post-template {
+    #main-menu li {
+          padding: 30px 0;
     }
   }
 
@@ -91,12 +103,12 @@
 
       .post-page,
       .page-template {
-        padding: 20px 3% 0;
+        padding: 20px 3%;
         margin-bottom: 0;
 
         .post-head {
-          padding-bottom: 50px;
-          padding-top: 50px;
+          padding-bottom: 30px;
+          padding-top: 30px;
 
           .post-title {
             font-weight: 700;
@@ -128,6 +140,7 @@
       .about-author {
         background: #f0f1f4;
         padding: 20px;
+        margin-bottom:0;
       }
 
       .prev-next-wrap {
