--- a/assets/css/bootstrap-override.less
+++ b/assets/css/bootstrap-override.less
@@ -6,7 +6,7 @@
 @media(max-width: 800px) {
   .post-preview {
     margin: 8px 16px;
-    padding: 20px;
+    padding: 10px;
 
     &.tag-video {
       .post-content {
@@ -15,7 +15,7 @@
     }
 
     .post-content {
-      padding: 0 !important;
+      padding: 0 10px !important;
     }
   }
 
@@ -37,12 +37,13 @@
     }
     @media(max-width: 600px){
       max-width: 310px;
+      border: 0;
     }
   }
 
   .post-template {
     #main-menu li {
-          padding: 30px 0;
+          padding: 20px 0;
     }
   }
 
@@ -58,7 +59,7 @@
   .main-navigation {
     background: @theme-color;
     padding: 0 20px;
-    margin-bottom: 10px;
+    margin-bottom: 0;
     border:0;
 
     .container {
