--- a/assets/css/less_parts/variables.less
+++ b/assets/css/less_parts/variables.less
@@ -2,7 +2,7 @@
 	COLOR VARIABLE FOR THEME
 ====================================================*/
 @theme-color: #00ada7;        // theme color
-@secondary-color: #00b1d1;				// theme color
+@secondary-color: #00b1d1;				// secondary theme color
 @hover-color: #003e7c;
 @bg-color: #ebebeb;					// Background color / secndary theme color
 @bg-color-light: #e0ecef;			// Light background color
