--- a/partials/loop.hbs
+++ b/partials/loop.hbs
@@ -35,7 +35,7 @@
 			{{content words="80"}}
 	</div>
 	<div class="post-permalink">
-		<div class="pull-left tag-list">
+		<div class="tag-list">
 			<span class="author"><i class="far fa-user"></i><span>{{#author}}{{slug}}{{/author}}</span></span>
 			<span class="tags">
 			{{#if tags}}
