--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -71,6 +71,11 @@ h2 {
   justify-content: center;
   flex-direction: column;
 }
+@media (max-width: 800px) {
+  .home-template .main-navigation {
+    margin-bottom: 10px;
+  }
+}
 .h3,
 h3 {
   font-size: 2em;
@@ -109,6 +114,7 @@ a {
 }
 a:hover {
   color: #00ada7;
+  cursor: pointer;
 }
 a img,
 a:active,
@@ -117,9 +123,7 @@ a:focus {
 }
 .btn {
   padding: 7px 14px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
+  border-radius: 0;
 }
 .btn-default {
   border: 1px solid #00ada7;
@@ -235,8 +239,13 @@ pre {
   top: 0;
   content: '';
 }
-.post-preview.upcoming,
-.post-preview.tag-hash-upcoming {
+@media (max-width: 600px) {
+  .post-preview .post-content {
+    font-size: 14px;
+  }
+}
+.post-preview.tag-hash-upcoming,
+.post-preview.upcoming {
   display: none;
 }
 .post-preview.tag-roundup .featured-media {
@@ -254,7 +263,12 @@ pre {
 }
 .post-preview.tag-hash-image .post-head {
   border-bottom: 0;
-  padding: 20px 0;
+  padding: 30px 0 !important;
+}
+@media (max-width: 800px) {
+  .post-preview.tag-hash-image .post-head {
+    padding: 20px 10px !important;
+  }
 }
 /*====================================================
 	header
@@ -282,7 +296,7 @@ pre {
   }
 }
 .main-header .container:nth-of-type(1) {
-  background: url(https://hackers.nyc3.digitaloceanspaces.com/logo_white.png) center center;
+  background: url("https://hackers.nyc3.digitaloceanspaces.com/logo_white.png") center center;
   background-size: contain;
   background-repeat: no-repeat;
 }
@@ -392,7 +406,7 @@ pre {
 	main post area
 ====================================================*/
 .post {
-  padding: 25px;
+  padding: 15px;
   background: #FFFFFF;
   margin-bottom: 20px;
   position: relative;
@@ -427,9 +441,6 @@ pre {
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg);
 }
-.post .btn {
-  float: right;
-}
 .post .roundup {
   position: absolute;
   background: #c9c9c9;
@@ -453,6 +464,11 @@ pre {
   padding: 30px 0;
   line-height: 1;
   text-align: left;
+}
+@media (max-width: 600px) {
+  .post .post-head {
+    padding: 20px 10px !important;
+  }
 }
 .post .post-head .post-title {
   text-align: left;
@@ -480,7 +496,7 @@ pre {
 }
 @media (max-width: 600px) {
   .post .post-head .post-title {
-    font-size: 2em;
+    font-size: 1.7em;
   }
 }
 .post .post-head .post-excerpt {
@@ -488,6 +504,12 @@ pre {
   line-height: 1;
   font-weight: 600;
   text-align: left;
+}
+@media (max-width: 600px) {
+  .post .post-head .post-excerpt {
+    font-weight: 500;
+    font-size: 1em;
+  }
 }
 .post .post-head .post-meta {
   color: #959595;
@@ -514,7 +536,7 @@ pre {
 }
 @media (max-width: 600px) {
   .post .post-head {
-    padding: 20px 0;
+    padding: 20px 10px;
   }
 }
 .post .featured-media {
@@ -558,6 +580,9 @@ pre {
 }
 .post > .post-permalink {
   text-align: left;
+  display: flex;
+  justify-content: space-between;
+  padding: 10px;
 }
 .post > .post-permalink .btn {
   font-size: 18px;
@@ -565,11 +590,19 @@ pre {
   text-transform: uppercase;
   padding: 10px 20px;
 }
+@media (max-width: 600px) {
+  .post > .post-permalink .btn {
+    font-size: 14px;
+    font-weight: 100;
+    padding: 7px 18px;
+  }
+}
 .post .tag-list {
   color: #141624;
-  margin-top: 10px;
   font-size: 14px;
-  margin-right: 5px;
+  display: inline;
+  height: fit-content;
+  margin: auto 0;
 }
 .post .tag-list i {
   color: #141624;
@@ -607,7 +640,7 @@ pre {
 }
 @media (max-width: 600px) {
   .post .tag-list a {
-    font-weight: 500;
+    font-weight: 600;
   }
 }
 .post .tag-list a:hover {
@@ -660,8 +693,6 @@ pre {
   display: inline-block;
   color: #FFFFFF;
   background: #00ada7;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
   border-radius: 0;
   padding: 6px 13px;
 }
@@ -677,9 +708,6 @@ pre {
   display: inline-block;
   line-height: 1;
   padding: 12px 14px;
-  -webkit-border-radius: 2px;
-  -moz-border-radius: 2px;
-  border-radius: 2px;
 }
 /*====================================================
 	about author and comment and next-prev link
@@ -981,7 +1009,7 @@ pre {
 .cover {
   text-align: center;
   background: #FFFFFF;
-  padding: 35px;
+  padding: 25px;
   margin-bottom: 20px;
 }
 .cover .tag-name {
@@ -1007,6 +1035,11 @@ pre {
 .cover .meta-info span i {
   margin-right: 7px;
 }
+@media (max-width: 600px) {
+  .cover .meta-info span {
+    display: block;
+  }
+}
 .cover .bio {
   margin-top: 7px;
 }
@@ -1017,7 +1050,12 @@ pre {
   background: #202020;
   padding: 35px 0 0;
   color: #b4b4b4;
-  margin-top: 10px;
+  margin-top: 30px;
+}
+@media (max-width: 600px) {
+  .main-footer {
+    margin-top: 10px;
+  }
 }
 .main-footer .widget .title {
   color: #FFFFFF;
@@ -1078,7 +1116,7 @@ p {
   position: fixed;
   right: 10px;
   bottom: 10px;
-  background: rgba(0, 173, 167, 0.6);
+  background: rgba(0, 177, 209, 0.6);
   color: #FFFFFF;
   text-align: center;
   -webkit-border-radius: 2px;
@@ -1253,26 +1291,31 @@ p {
 .page iframe {
   margin: 0 auto !important;
 }
-.post-preview .post-title,
+@media (max-width: 600px) {
+  .page .post-head {
+    padding: 10px 0 !important;
+  }
+}
 .post-preview .post-meta,
+.post-preview .post-title,
 .post-preview h5 {
   text-align: left;
 }
-.post-templatep,
-.page-templatep {
+.page-templatep,
+.post-templatep {
   font-size: 24px;
   font-weight: 600;
 }
-.post-template .post-title,
-.page-template .post-title {
+.page-template .post-title,
+.post-template .post-title {
   font-weight: 700;
 }
-.post-template .tag-list,
-.page-template .tag-list {
+.page-template .tag-list,
+.post-template .tag-list {
   margin: 3px;
 }
-.post-template .link-preview,
-.page-template .link-preview {
+.page-template .link-preview,
+.post-template .link-preview {
   border: 1px solid #dadada;
   padding: 5px;
   width: 80%;
@@ -1283,13 +1326,13 @@ p {
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 @media (max-width: 600px) {
-  .post-template .link-preview,
-  .page-template .link-preview {
+  .page-template .link-preview,
+  .post-template .link-preview {
     width: 100%;
   }
 }
-.post-template .link-preview .preview-image,
-.page-template .link-preview .preview-image {
+.page-template .link-preview .preview-image,
+.post-template .link-preview .preview-image {
   display: inline-block;
   height: 200px;
   width: 100%;
@@ -1300,20 +1343,20 @@ p {
   border-radius: 3px 3px 1px 1px;
 }
 @media (max-width: 600px) {
-  .post-template .link-preview .preview-image,
-  .page-template .link-preview .preview-image {
+  .page-template .link-preview .preview-image,
+  .post-template .link-preview .preview-image {
     height: 130px;
   }
 }
-.post-template .link-preview i,
-.page-template .link-preview i {
+.page-template .link-preview i,
+.post-template .link-preview i {
   display: inline-block;
   font-size: 12px;
   margin-right: 10px;
   color: grey;
 }
-.post-template .link-preview .url-info,
-.page-template .link-preview .url-info {
+.page-template .link-preview .url-info,
+.post-template .link-preview .url-info {
   color: #00ada7;
   margin-top: 0;
   font-size: 13px;
@@ -1325,21 +1368,21 @@ p {
   width: 100%;
   line-height: 1;
 }
-.post-template .link-preview .link-info,
-.page-template .link-preview .link-info {
+.page-template .link-preview .link-info,
+.post-template .link-preview .link-info {
   display: inline-block;
   width: 100%;
   overflow: hidden;
-  padding: 10px 10px 0 10px;
+  padding: 10px 10px 0;
 }
-.post-template .link-preview .link-info h4,
-.page-template .link-preview .link-info h4 {
+.page-template .link-preview .link-info h4,
+.post-template .link-preview .link-info h4 {
   margin-top: 0;
   font-size: 1.3em;
   font-weight: 500;
 }
-.post-template .link-preview .link-info p,
-.page-template .link-preview .link-info p {
+.page-template .link-preview .link-info p,
+.post-template .link-preview .link-info p {
   color: #505050;
   font-weight: 100;
   line-height: 1.3;
@@ -1352,31 +1395,28 @@ p {
   overflow: hidden;
 }
 @media (max-width: 600px) {
-  .post-template .link-preview .link-info p,
-  .page-template .link-preview .link-info p {
+  .page-template .link-preview .link-info p,
+  .post-template .link-preview .link-info p {
     display: none;
   }
 }
-.post-template .link-preview:hover,
-.page-template .link-preview:hover {
+.page-template .link-preview:hover,
+.post-template .link-preview:hover {
   background-color: #00ada7;
   color: #fff;
   cursor: pointer;
   text-decoration: none;
   border: 1px solid #00ada7;
 }
-.post-template .link-preview:hover a,
 .page-template .link-preview:hover a,
-.post-template .link-preview:hover h4,
+.post-template .link-preview:hover a,
 .page-template .link-preview:hover h4,
-.post-template .link-preview:hover p,
+.post-template .link-preview:hover h4,
 .page-template .link-preview:hover p,
-.post-template .link-preview:hover span,
-.page-template .link-preview:hover span {
+.post-template .link-preview:hover p,
+.page-template .link-preview:hover span,
+.post-template .link-preview:hover span {
   color: #fff;
-}
-.page-template .post-title {
-  /*text-align: center !important;*/
 }
 .author-template .post .kg-card-markdown *,
 .home-template .post .kg-card-markdown *,
