--- a/assets/css/screen.less
+++ b/assets/css/screen.less
@@ -263,7 +263,7 @@ pre {
 
 		.post-head {
 			margin-top: 0;
-			padding-top: 0;
+			padding: 10px;
 		}
 
 		.post-content {
@@ -278,7 +278,7 @@ pre {
 
 		.post-head {
 			border-bottom: 0;
-			padding: 30px 0 !important;
+			padding: 20px 10px !important;
 
 			@media(max-width: 800px) {
 				padding: 20px 10px !important;
@@ -467,6 +467,7 @@ pre {
 		height: 40px;
 		line-height: 54px;
 		transform: rotate(45deg);
+		z-index: 20;
 
 		i {
 			.transform(rotate(-45deg));
@@ -474,12 +475,9 @@ pre {
 	}
 
 	.post-head {
-		padding: 30px 0;
+		padding: 20px 10px;
 		line-height: 1;
 		text-align: left;
-		@media(max-width: 600px) {
-			padding: 20px 10px !important;
-		}
 
 		.post-title {
 			text-align: left;
@@ -573,7 +571,7 @@ pre {
 	}
 
 	.post-content {
-		margin: 0 0 20px;
+		margin: 0 10px 20px;
 		overflow-x: hidden;
 		clear: both;
 
